# riscv-spectre-artifact

./: LICENSE  README.md  cacheutils.h  libjit.h
barrier-test/: Makefile  README.md  barrier_test.c  barrier_test_rsb.c
bpf-spectre-exploit/: Makefile  README.md  common.h  exploit-complete.c  exploit.c  init-environment.sh  libbpf.c  libbpf.h
bpf-spectre-exploit/kmod/: Makefile  bpf_exploit_helper.c  bpf_exploit_helper.h
branchless-jit-dispatch/: Makefile  README.md  dispatch.c
branchless-jit-dispatch/ubpf/: .gitignore  .gitmodules  CMakeLists.txt  SPECTRE_MITIGATION.md  benchmark.sh  requirements.txt
branchless-jit-dispatch/ubpf/.github/: dependabot.yml
branchless-jit-dispatch/ubpf/.github/workflows/: fuzzing.yml  main.yml  posix.yml  update-docs.yml  windows.yml
branchless-jit-dispatch/ubpf/cmake/: settings.cmake
branchless-jit-dispatch/ubpf/custom_tests/: CMakeLists.txt
branchless-jit-dispatch/ubpf/custom_tests/data/: ubpf_test_atomic_validate.input  ubpf_test_default_dispatcher_helper_context.input  ubpf_test_default_local_function_stack_size.input
branchless-jit-dispatch/ubpf/custom_tests/descrs/: ubpf_test_atomic_validate.md  ubpf_test_custom_local_function_stack_size_unaligned.md  ubpf_test_custom_local_function_stack_size_zero.md  ubpf_test_debug_function.md  ubpf_test_default_dispatcher_helper_context.md  ubpf_test_default_local_function_stack_size.md
branchless-jit-dispatch/ubpf/custom_tests/srcs/: ubpf_custom_test_support.cc  ubpf_custom_test_support.h  ubpf_test_atomic_validate.cc  ubpf_test_custom_local_function_stack_size.cc  ubpf_test_custom_local_function_stack_size_unaligned.cc  ubpf_test_custom_local_function_stack_size_zero.cc  ubpf_test_debug_function.cc  ubpf_test_default_dispatcher_helper_context.cc  ubpf_test_default_local_function_stack_size.cc  ubpf_test_external_dispatcher_context_overwrite.cc  ubpf_test_external_dispatcher_simple_context.cc  ubpf_test_frame_pointer.cc  ubpf_test_jit_unexpected_instruction.cc  ubpf_test_update_dispatcher.cc  ubpf_test_update_helpers.cc
branchless-jit-dispatch/ubpf/libfuzzer/: CMakeLists.txt  README.md  libfuzz_harness.cc  libfuzzer_config.h.inc  split.sh
branchless-jit-dispatch/ubpf/scripts/: format-code
branchless-jit-dispatch/ubpf/tests/: call_local_use_stack.data  err-call-bad-imm.data  err-call-invalid-jump.data  err-call0.data  ldxb-0offset.data  ldxb-large-offset.data  ldxb-small-offset.data
branchless-jit-dispatch/ubpf/ubpf/: dictionary_generator.py  disassembler.py
branchless-jit-dispatch/ubpf/ubpf_plugin/: CMakeLists.txt  ubpf_plugin.cc
branchless-jit-dispatch/ubpf/vm/: test.c  ubpf_jit_arm64.c  ubpf_jit_support.c  ubpf_jit_support.h  ubpf_jit_x86_64.c  ubpf_loader.c  ubpf_vm.c
counter-thread-timer/: Makefile  README.md  bench.c  counter_timer.h
gadet-scanning/: .dockerignore  .gitignore  Dockerfile  README.md  compare-tools.py  run-analysis.py  sync-from-remote.py
gadet-scanning/codeql/: qlpack.yml  setup.sh  spectre-v1.ql
gadet-scanning/configs/: linux-6.6-riscv-smatch.config
gadet-scanning/mitigation_diffing/: README.md  mitigations.csv  setup.py
gadet-scanning/mitigation_diffing/mitigation_diffing/: __init__.py  cli.py
gadet-scanning/mitigation_diffing/mitigation_diffing/matching/: __init__.py  embedding_matcher.py
gadet-scanning/mitigation_diffing/mitigation_diffing/utils/: colors.py
gadet-scanning/smatch/: setup.sh
kernel-patches/: README.md  bpf-emit-fence-i-nospec.patch  futex-mask-user-pointers.patch  kvm-aia-csr-ec87a82ca874.patch  kvm-aplic-8565617a8599.patch  kvm-fp-reg-8f0c15c4b14f.patch  kvm-one_reg-f9e26fc32541.patch  kvm-pmu-2dda6a9e09ee.patch  syscall-table-indexing-25fd7ee7bf58.patch  uaccess-pointer-masking-v1.patch
microarch-measurements/rsbsize-test/: Makefile  README.md  main.c  plot.py
microarch-measurements/speculation-window/: Makefile  README.md  main.c
specbuild/: .gitattributes  .gitignore  README.md  build.py  fetch-sysroot.py  spec-build.yaml
specbuild/compilers/: Dockerfile.llvm-riscv  README.md  fix-retpoline-offset.patch  fix-retpoline-twophase.patch
specbuild/configs/: riscv64-baseline.cfg  riscv64-fence.cfg  riscv64-gcc.cfg  riscv64-retpoline.cfg  riscv64-slh.cfg
specbuild/docker/: Dockerfile  specbuild.py
specbuild/scripts/: run.sh  specinvoke_config.h
spectre-poc-framework/: README.md  common.mk  exploit_framework.h  run_all_tests.py
spectre-poc-framework/docs/: ADDING_VARIANTS.md  FRAMEWORK_API.md
spectre-poc-framework/spectre/BTB/ca_ip/: Makefile  main.c
spectre-poc-framework/spectre/BTB/ca_oop/: Makefile  main.c
spectre-poc-framework/spectre/BTB/sa_ip/: Makefile  main.c
spectre-poc-framework/spectre/BTB/sa_oop/: Makefile  main.c
spectre-poc-framework/spectre/PHT/ca_ip/: Makefile  main.c
spectre-poc-framework/spectre/PHT/ca_oop/: Makefile  main.c
spectre-poc-framework/spectre/PHT/call_redirect/: Makefile  main.c
spectre-poc-framework/spectre/PHT/sa_ip/: Makefile  main.c
spectre-poc-framework/spectre/PHT/sa_ip_imm/: Makefile  main.c
spectre-poc-framework/spectre/PHT/sa_oop/: Makefile  main.c
spectre-poc-framework/spectre/RSB/btb_fallback/: Makefile  btb.S  main.c
spectre-poc-framework/spectre/RSB/ca_ip/: Makefile  main.c
spectre-poc-framework/spectre/RSB/ca_oop/: Makefile  main.c
spectre-poc-framework/spectre/RSB/sa_ip/: Makefile  main.c
spectre-poc-framework/spectre/RSB/sa_oop/: Makefile  main.c
spectre-poc-framework/spectre/RSB/sls_fallback/: Makefile  main.c  sls.S
spectre-poc-framework/spectre/STL/: Makefile  main.c
spectre-poc-framework/tools/baseline/: Makefile  main.c
spectre-poc-framework/tools/check-predictors/: Makefile  README.md  check_c910_predictors.c
